# sf2-rl-hw

./: .gitignore  README.md  pyproject.toml
configs/: base.yaml
configs/experiments/: baseline-10m.yaml  baseline-legacy-reference.yaml  baseline.yaml  debug-e2e.yaml
src/sf2_rl_hw/: cli.py  config.py  draw.ipynb  evaluate.py  play.py  record.py  rollout.py  train.py
src/sf2_rl_hw/agents/: __init__.py  ppo.py
src/sf2_rl_hw/envs/: __init__.py  retro_env.py
src/sf2_rl_hw/rewards/: __init__.py  base.py  street_fighter.py
src/sf2_rl_hw/utils/: __init__.py  logging.py  overlay.py  paths.py  seed.py  video.py
